syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "FileServiceProto";

service FileService {
  rpc uploadFile (FileDTO) returns (UploadFileResponse);
  rpc getFileById (GetFileRequest) returns (FileDTO);
}

message FileDTO {
  string userId = 1;
  string filename = 2;
  string contentType = 3;
  bytes data = 4;
  string id = 5;
}

message GetFileRequest {
  string id = 1;
}

message UploadFileResponse {
  string id = 1;
}